--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body {
   line-height: 1.5;
   color: #495057;
   text-align: left;
-  background-color: #fff;
+  background-color: #f9fafb;
 }
 
 code,
